--- a/PinterestPinsIdsReplacer/PinterestPinsIdsReplacer.csproj
+++ b/PinterestPinsIdsReplacer/PinterestPinsIdsReplacer.csproj
@@ -46,14 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmPPReplacer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmPPReplacer.Designer.cs">
+      <DependentUpon>FrmPPReplacer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmProto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmProto.Designer.cs">
+      <DependentUpon>FrmProto.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmPPReplacer.resx">
+      <DependentUpon>FrmPPReplacer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmProto.resx">
+      <DependentUpon>FrmProto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +87,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
