bugs fixed, added file location

--- a/PinterestPinsIdsReplacer/App.config
+++ b/PinterestPinsIdsReplacer/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />     
     </startup>
+  <appSettings>
+    <add key="ProtoShemaTxtPath" value="S:\KEIS\RAZVOJ\IGOR\Visual Studio 2017\Projects\PinterestPinsIdsReplacer\ProtoShema.txt"/>
+    <add key="WordsToReplaceTxtPath" value="S:\KEIS\RAZVOJ\IGOR\Visual Studio 2017\Projects\PinterestPinsIdsReplacer\WordsToReplace.txt"/>
+  </appSettings>
 </configuration>
